--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,19 +76,24 @@ jobs:
           pip install huggingface_hub
 
       - name: Configure Git
+        env:
+          GIT_NAME: ${{ secrets.GIT_NAME }}
+          GIT_EMAIL: ${{ secrets.GIT_EMAIL }}
         run: |
-          git config --global user.email "mhdzumair@gmail.com"
-          git config --global user.name "Mohamed Zumair"
+          git config --global user.name "$GIT_NAME"
+          git config --global user.email "$GIT_EMAIL"
+          git config --global credential.helper store
 
       - name: Push to Hugging Face
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          huggingface-cli login --token $HF_TOKEN --add-to-git-credential
+          echo "machine huggingface.co login $HF_TOKEN" > ~/.netrc
+          chmod 600 ~/.netrc
           git remote add hf https://huggingface.co/spaces/mhdzumair/mediaflow-proxy
           git fetch hf
           git checkout -b main || git checkout main
           git pull hf main --rebase || true
           git add .
           git commit -m "Update to version ${{ github.ref_name }}" || echo "No changes to commit"
-          git push https://$HF_TOKEN@huggingface.co/spaces/mhdzumair/mediaflow-proxy main
+          git push hf main
