--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mediaflow-proxy"
-version = "1.5.0"
+version = "1.5.1"
 description = "A high-performance proxy server for streaming media, supporting HTTP(S), HLS, and MPEG-DASH with real-time DRM decryption."
 authors = ["mhdzumair <mhdzumair@gmail.com>"]
 readme = "README.md"
@@ -22,13 +22,13 @@ include = ["LICENSE", "README.md", "mediaflow_proxy/static/*"]
 
 
 [tool.poetry.dependencies]
-python = "^3.12"
-fastapi = "^0.112.2"
+python = ">=3.10"
+fastapi = "^0.114.2"
 httpx = {extras = ["socks"], version = "^0.27.2"}
 tenacity = "^9.0.0"
 xmltodict = "^0.13.0"
 cachetools = "^5.4.0"
-pydantic-settings = "^2.4.0"
+pydantic-settings = "^2.5.2"
 gunicorn = "^23.0.0"
 pycryptodome = "^3.20.0"
 uvicorn = "^0.30.6"
