--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -22,7 +23,7 @@ include = ["LICENSE", "README.md", "mediaflow_proxy/static/*"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.9"
 fastapi = "0.115.6"
 httpx = {extras = ["socks", "zstd"], version = "^0.28.1"}
 tenacity = "^9.0.0"
