--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ uvicorn = "^0.32.1"
 tqdm = "^4.67.1"
 aiofiles = "^24.1.0"
 beautifulsoup4 = ">=4.12.3"
+lxml = "^5.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
