--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   mediaflow-proxy:
     ports:
-      - '8888:8888'
-    environment:
-      - API_PASSWORD=your_password
+      - "8888:8888"
+    env_file:
+      - .env
     restart: always
     logging:
       options:
         max-size: 1g
-    image: mhdzumair/mediaflow-proxy
+    image: mhdzumair/mediaflow-proxy:latest
