--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "mediaflow-proxy"
-version = "1.9.9"
+version = "2.0.0"
 description = "A high-performance proxy server for streaming media, supporting HTTP(S), HLS, and MPEG-DASH with real-time DRM decryption."
 authors = ["mhdzumair <mhdzumair@gmail.com>"]
 readme = "README.md"
@@ -18,28 +18,29 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 include = ["LICENSE", "README.md", "mediaflow_proxy/static/*"]
 
 
 [tool.poetry.dependencies]
 python = ">=3.9"
-fastapi = "0.115.6"
+fastapi = "0.115.12"
 httpx = {extras = ["socks", "zstd"], version = "^0.28.1"}
-tenacity = "^9.0.0"
+tenacity = "^9.1.2"
 xmltodict = "^0.14.2"
-pydantic-settings = "^2.6.1"
+pydantic-settings = "^2.9.1"
 gunicorn = "^23.0.0"
-pycryptodome = "^3.20.0"
-uvicorn = "^0.32.1"
+pycryptodome = "^3.22.0"
+uvicorn = "^0.34.2"
 tqdm = "^4.67.1"
 aiofiles = "^24.1.0"
-beautifulsoup4 = ">=4.12.3"
-lxml = "^5.3.2"
+beautifulsoup4 = ">=4.13.4"
+lxml = "^5.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
+black = "^25.1.0"
 
 [build-system]
 requires = ["poetry-core"]
