--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ tqdm = "^4.67.1"
 aiofiles = "^24.1.0"
 beautifulsoup4 = ">=4.13.4"
 lxml = "^5.4.0"
+psutil = "^6.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
