--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ xmltodict = "^0.14.2"
 pydantic-settings = "^2.9.1"
 gunicorn = "^23.0.0"
 pycryptodome = "^3.22.0"
-uvicorn = "^0.34.2"
+uvicorn = {extras = ["standard"], version = "^0.35.0"}
 tqdm = "^4.67.1"
 aiofiles = "^24.1.0"
 beautifulsoup4 = ">=4.13.4"
