Fix DLHD | + Vavoo support | + Playlist Builder | + Pre-Buffer System And other sfuff  (#125)
* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Create vavoo.py

* Update handlers.py

* Update factory.py

* Update vavoo.py

* Update vavoo.py

* Update pyproject.toml

* Update poetry.lock

* Add files via upload

* Update dlhd.py

* Update main.py

* Update __init__.py

* Update index.html

* Update configs.py

* Update mpd_processor.py

* Add files via upload

* Update dlhd.py

* Update pyproject.toml

* Update m3u8_processor.py

* Update index.html

* Update proxy.py

* Update poetry.lock

* Update poetry.lock

* Update playlist_builder.py

* Update proxy.py

* Update playlist_builder.py

* Update playlist_builder.py

* Update pyproject.toml

* Update poetry.lock

* Update README.md

* Update README.md

* Update docker-compose.yml

* Update docker-compose.yml

* Update and rename docker-compose.yml to docker-compose.portainer

* Update docker-compose.portainer

* Update m3u8_processor.py

* Update handlers.py

* Update handlers.py

* Update m3u8_processor.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update dlhd.py

* Update vavoo.py

* Update http_utils.py

* Update pyproject.toml

* Update pyproject.toml

* Update poetry.lock

* Update pyproject.toml

* Update poetry.lock

* Update dlhd.py

* Update dlhd.py

* Update playlist_builder.py

* Update playlist_builder.py

* Update playlist_builder.py

* Update handlers.py

* Update Dockerfile

* Update handlers.py

* Update handlers.py

* Update playlist_builder.py

* Update handlers.py

* Update playlist_builder.py

* Update playlist_builder.py

* Update playlist_builder.py

* Add files via upload

* Update vavoo.py

* Update mediaflow_proxy/extractors/vavoo.py

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-services:
-  mediaflow-proxy:
+services:  
+  mfp:
+    build: https://github.com/nzo66/mediaflow-proxy.git#main
+    container_name: mfp
+    restart: unless-stopped
     ports:
-      - "8888:8888"
-    env_file:
-      - .env
-    restart: always
-    logging:
-      options:
-        max-size: 1g
-    image: mhdzumair/mediaflow-proxy:latest
+      - '8888:8888'
+    environment:
+      API_PASSWORD: mfp
+      FORWARDED_ALLOW_IPS: "*"
