Migrate HTTP client to aiohttp for better performance and lower CPU usage
- Replaced httpx with aiohttp for HTTP requests across the project.
- Updated pyproject.toml to include aiohttp and aiohttp-socks as dependencies.
- Removed unused httpx transport configurations and related code.
- Enhanced error handling and response processing in extractors and routes.
- Improved performance and maintainability by centralizing HTTP client logic.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "fastapi",
-    "httpx[socks,zstd]",
+    "aiohttp>=3.9.0",
+    "aiohttp-socks>=0.8.0",
     "tenacity",
     "xmltodict",
     "pydantic-settings",
