--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "curl_cffi",
     "telethon>=1.42.0",
     "cryptg>=0.4.0",
+    "redis[hiredis]>=5.0.0",
 ]
 
 [project.urls]
